fix for missing margin-bottom on body-header

--- a/src/body-header/body-header.less
+++ b/src/body-header/body-header.less
@@ -1,6 +1,7 @@
 ﻿body-header {
     display: flex;
     line-height: unit(@body-header-height,px);
+	margin-bottom: unit(@padding-half, px);
     color: @body-header-color;
     background-color: @body-header-background-color;
 
